--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework= = info
 logging.level.com.mywebapp.todo.web_app_todo = debug
 spring.mvc.format.date=yyyy-MM-dd
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
