--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,10 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework= = info
 logging.level.com.mywebapp.todo.web_app_todo = debug
 spring.mvc.format.date=yyyy-MM-dd
-spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
+spring.datasource.username=todos-user
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:h2:mem:testdb
